first try qt js form validation

--- a/exercice-form/index.html
+++ b/exercice-form/index.html
@@ -17,7 +17,6 @@
 						id="surname"
 						name="surname"
 						aria-label="Nom"
-						pattern="([A-Z][a-z])\w+"
 						aria-describedby="surname-desc"
 						required
 					/>
@@ -31,7 +30,6 @@
 						id="name"
 						name="name"
 						aria-label="Prénom"
-						pattern="([A-Z][a-z])\w+"
 						aria-describedby="name-desc"
 						required
 					/>
@@ -55,9 +53,13 @@
 					</span>
 
 					<label for="email">Email :</label>
-					<input type="email" id="email" name="email" aria-label="Email"
-					pattern="(?:[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*|"(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*")@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\[(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?|[a-z0-9-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])"
-					required/>
+					<input
+						type="email"
+						id="email"
+						name="email"
+						aria-label="Email"
+						required
+					/>
 					<span id="email-desc">
 						Votre email doit comporter un @ et un nom de domaine
 					</span>
@@ -95,8 +97,9 @@
 						</div>
 						<span id="console-desc">Vous devez cocher au moins une case</span>
 					</fieldset>
-					<input type="submit" />
+					<input type="submit" id="submit" />
 					<input type="reset" />
+					<span id="info"></span>
 				</form>
 			</fieldset>
 		</main>
